R6.10.1-2.3.1  (marcio)
    Bumping asyn to R4.39-1.0.1

R6.10.1-2.3.0  (zoven)
    Import changes from motor-R6-8-RC1_1-12 for Newport XPS controller
      - auto detection of stage and motor record parameters
    Add parameter to read hardware status periodically

R6.10.1-2.2.0  (Kukhee Kim)
        Restore back IPAC to support Hytec Motor, build with ipac R2.15-1.0.0

R6.10.1-2.1.1 (slepicka)
	Bumping asyn to R4.32-1.0.0

R6.10.1-2.1.0 (slepicka)
	Add patch by alexmon at Aerotech drvEnsembleAsyn.cc
	Comment: clear motorAxisproblem if a limit switch is hit

R6.10.1-2.0.0 (slepicka)
	Add changes made by alexmon at Aerotech devEnsembleAsyn.cc to support SXR undulator.

R6.10-1.0.1 (marcio)
           Exclusive release without IPAC and sequencer. Don't use it if you
           need any of them. Also, this one uses 
           ASYN_MODULE_VERSION=R4.31-0.1.0 instead of R4.31-1.0.0.

R6.10-1.0.0 (marcio)
           This is a release that combines motor R6-10-1 with all changes made
           in SLAC since 2015-08-18, when R6-9 was first imported. This release
           builds, but was never tested. If you use it and test, please,
           create a release R6.10-1.0.1, just updating RELEASE_NOTES telling us
           that the release is stable.

R6.9-0.8.0 (mdunning)
    Add support for NewFocus/Newport model 8742 picoMotors

R6.9-0.7   (mcbrowne)
	   Added support for SmarAct MCS2 controller.
           Moved to newer version of asyn: R4.31-1.0.0.

R6.9-0.6   (jvamosi)
           Add SmartMotorAsyn modification (by zoven).
           (namrata)
           Modify Torque ON/OFF handling ability for linmot drive. 
           (motorApp/linmotSrc/LinmotMotorDriver.cpp)

R6.9-0.5:  (Slepicka)
           Build against new versions of:
               asyn: R4.31-0.1.0
               ipac: R2.14-0.1.0
                seq: R2.2.4-0.1.0
           
R6.9-0.4:  (Ernesto)
           Build against new version of asyn: asyn R4.30-1.1.2
motor-R6-9_0-3 (namrata)