@@ -1,3 +1,6 @@
+R6.10.1-2.3.2  (mcbrowne)
+    Pulling in SmarAct MCS2 fixes from slac-master.
+
 R6.10.1-2.3.1  (marcio)
     Bumping asyn to R4.39-1.0.1
 
